add mobile stylings

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -82,6 +82,7 @@
     flex-direction: column;
     align-items: start;
     gap: 10px;
+    width: 550px;
 }
 
 .form_fields label{
@@ -92,7 +93,7 @@
 
 .form_fields input{
     border: none;
-    width: 550px;
+    width: 100%;
     height: 60px;
     padding-left: 20px;
     border-radius: 5px;
@@ -103,7 +104,7 @@
 }
 
 .form_fields textarea{
-    width: 550px;
+    width: 100%;
     border: none;
     padding: 20px;
     border-radius: 5px;
@@ -128,6 +129,36 @@
 .contact_submit:hover{
     transform: scale(1.1);
     transition: 0.4s;
+}
+
+@media (min-width: 1024px) {
+    .contact{
+        margin: 80px;
+    }
+
+    .contact_section {
+        gap: 45px;
+    }
+
+    .contact_left h1{
+        font-size: 45px;
+    }
+
+    .contact_left p{
+        font-size: 17px;
+    }
+
+    .form_fields{
+        width: 450px;
+    }
+
+    .form_fields input{
+        padding: 0;
+    }
+
+    .form_fields textarea{
+        padding: 0;
+    }
 }
 
 @media (max-width: 768px) {
@@ -172,22 +203,69 @@
         align-items: center;
     }
 
+    .form_fields{
+        width: 580px;
+    }
+
     .form_fields label{
         font-size: 20px;
     }
 
     .form_fields input{
-        width: 600px;
+        width: 100%;
         height: 50px;
     }
 
     .form_fields textarea{
-        width: 580px;
+        width: 100%;
     }
 
     .contact_submit{
         margin-bottom: 0px;
         padding: 15px 50px;
         font-size: 18px;
+    }
+}
+
+@media (min-width: 414px) {
+
+    .contact {
+        margin: 50px 30px;
+    }
+
+    .contact_title h1 {
+        font-size: 32px;
+    }
+
+    .contact_title img {
+        width: 80px;
+    }
+
+    .contact_left h1 {
+        font-size: 30px;
+    }
+
+    .contact_left p {
+        font-size: 16px;
+    }
+
+    .contact_icon {
+        font-size: 25px;
+    }
+
+    .contact_right {
+        align-items: start;
+    }
+
+    .form_fields label {
+        font-size: 16px;
+    }
+
+    .form_fields {
+        width: 280px;
+    }
+
+    .form_fields input{
+        width: 106%;
     }
 }
