--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -72,12 +72,32 @@
     display: flex;
     justify-content: space-between;
     font-size: 18px;
+    margin-bottom: 50px;
 }
 
 .footer_bottom_right{
     display: flex;
     gap: 35px;
-    margin-bottom: 50px;
+}
+
+@media (min-width: 1024px){
+    .footer{
+        margin: 50px 80px;
+    }
+
+    .footer_top_right {
+        gap: 15px;
+    }
+
+    .footer_email_input {
+        gap: 15px;
+        padding: 15px;
+        padding-right: 0px;
+    }
+
+    .footer_bottom{
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -118,5 +138,25 @@
     .footer_bottom_right {
         gap: 5px;
 
+    }
+}
+
+@media (min-width: 414px) {
+    .footer{
+        margin: 50px 30px;
+    }
+    .footer_top_right{
+        flex-direction: column;
+    }
+
+    .footer_bottom{
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+    }
+
+    .footer_bottom_right{
+        flex-direction: column;
+        gap: 10px;
     }
 }
