--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -45,6 +45,20 @@
     font-size: 18px;
 }
 
+@media (min-width: 1024px) {
+    .about {
+        margin: 80px;
+    }
+
+    .about_para{
+        padding: 0;
+    }
+
+    .about_para ul{
+        gap: 12px;
+    }
+}
+
 @media (max-width: 768px) {
     .about{
        gap: 80px;
@@ -80,5 +94,28 @@
     .about_para{
         font-size: 18px;
         line-height: 25px;
+    }
+}
+
+@media (min-width: 414px) {
+    .about {
+        margin: 50px 30px;
+        gap: 30px;
+    }
+
+    .about_title h1 {
+        font-size: 32px;
+    }
+
+    .about_title img {
+        width: 80px;
+    }
+
+    .about_para{
+        padding: 0;
+    }
+
+    .about_para ul{
+        font-size: 16px;
     }
 }
