--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -68,6 +68,13 @@
     border-color: #b415ff;
 }
 
+@media (min-width: 1024px) {
+    .hero h1 {
+        font-size: 70px;
+    }
+}
+
+
 @media (max-width: 768px) {
     .hero img{
         margin-top: 60px;
@@ -103,5 +110,16 @@
     .hero_resume{
         padding: 20px 30px;
         border-radius: 40px;
+    }
+}
+
+@media (min-width: 414px) {
+    .hero_action{
+        flex-direction: column;
+    }
+
+    .hero h1 {
+        margin-top: 10px;
+        font-size: 32px;
     }
 }
