--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -45,7 +45,7 @@
     font-size: 18px;
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
     .about {
         margin: 80px;
     }
@@ -57,7 +57,7 @@
     .about_para ul{
         gap: 12px;
     }
-}
+} */
 
 @media (max-width: 768px) {
     .about{
@@ -97,7 +97,7 @@
     }
 }
 
-@media (min-width: 414px) {
+/* @media (min-width: 414px) {
     .about {
         margin: 50px 30px;
         gap: 30px;
@@ -118,4 +118,4 @@
     .about_para ul{
         font-size: 16px;
     }
-}
+} */
